<resources>
    <string name="app_name">My Application</string>
    <string name = "calc_text">0</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_div">/</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_">*</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_mul">/</string>
    <string name="calc_sub">-</string>
    <string name="calc_0">0</string>
    <string name="calc_clr">CLR</string>
    <string name="calc_add">+</string>
    <string name="calc_eq">=</string>
    <string name="dot">.</string>
    <string name="mul">*</string>
</resources>