<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textSize="25sp"
        android:text="k"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn_7"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_7"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:id="@+id/btn_8"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_8"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:id="@+id/btn_9"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_9"
            tools:ignore="UsingOnClickInXml"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDiv"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/calc_div"
            tools:ignore="UsingOnClickInXml"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_margin="2dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/a"
            android:onClick="onDigit"
            android:text="@string/calc_4"
            android:textColor="@color/b" />

        <Button
            android:id="@+id/btn_5"
            android:layout_margin="2dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/a"
            android:onClick="onDigit"
            android:text="@string/calc_5"
            android:textColor="@color/b"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="1dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/a"
            android:onClick="onDigit"
            android:text="@string/calc_6"
            android:textColor="@color/b"/>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/a"
            android:onClick="onOperator"
            android:text="@string/mul"
            android:textColor="@color/b"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn_1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_1"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:id="@+id/btn_2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_2"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:id="@+id/btn_3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_3"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSub"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/calc_sub"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/calc_0"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />

        <Button
            android:id="@+id/btn_clr"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/calc_clr"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/calc_add"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn_eq"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/calc_eq"
            android:textColor="@color/b"
            android:backgroundTint="@color/a"
            />

    </LinearLayout>



</LinearLayout>